--- a/members.css
+++ b/members.css
@@ -1,10 +1,24 @@
+.profile {
+  width: 50%;
+  margin: 40px auto;
+  padding: 2em;
+  background-color: #697552;
+  border-radius: 10px;
+}
+
+.info {
+  padding: 1em;
+}
+
+.profile>img {
+  box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.50);
+}
 
 @media (min-width: 700px) {
   .grid {
     display: grid;
     grid-row-gap: 50px;
     grid-template-columns: .5fr repeat(2, minmax(auto, 35em)) .5fr;
-
   }
   .content-wrap {
     grid-column: 2/4;
@@ -14,18 +28,13 @@
   }
   #d .content-wrap {
     display: grid;
-    grid-column-gap: 1em;
     grid-template-columns: repeat(2, 50%);
-
   }
-
-  .d-1 {
+  .profile {
+    width: 60%;
     grid-column: 1/2;
   }
-  .d-2 {
+  .profile:nth-child(even) {
+    width: 60%;
     grid-column: 2/3;
-  }
-
-  #c, #d {
-    text-align: left;
   }
