--- a/index.css
+++ b/index.css
@@ -1,3 +1,21 @@
+ul {
+    padding: 0;
+}
+.link {
+  display: inline;
+  width: 2.5em;
+
+}
+
+form {
+  font-size: .75em;
+  padding-bottom: 1em;
+  padding-left: 1em;
+}
+
+.d-text {
+  font-size: 14px;
+}
 
 @media (min-width: 700px) {
   .grid {
@@ -9,9 +27,7 @@
   .content-wrap {
     grid-column: 2/4;
   }
-  .content-text {
-    grid-column: 2/4;
-  }
+
   #d .content-wrap {
     display: grid;
     grid-column-gap: 1em;
