--- a/index.css
+++ b/index.css
@@ -1,10 +1,10 @@
 ul {
     padding: 0;
 }
+
 .link {
   display: inline;
   width: 2.5em;
-
 }
 
 form {
@@ -44,4 +44,13 @@ form {
 
   #c, #d {
     text-align: left;
+  }
+
+  ul {
+      padding: 0;
+  }
+
+  .link {
+    display: inline;
+    width: 2.5em;
   }
