--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ ul {
 
 .link {
   display: inline;
-  width: 2.5em;
+  width: 60px;
 }
 
 form {
@@ -44,13 +44,4 @@ form {
 
   #c, #d {
     text-align: left;
-  }
-
-  ul {
-      padding: 0;
-  }
-
-  .link {
-    display: inline;
-    width: 2.5em;
   }
